--- a/midprep-id/p1/tku/imgal/imageGallery.html
+++ b/midprep-id/p1/tku/imgal/imageGallery.html
@@ -1,14 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Image Gallery</title>
+    <title>Coffee - Free Bootstrap 4 Template by Colorlib</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Great+Vibes"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="../../css/open-iconic-bootstrap.min.css" />
+    <link rel="stylesheet" href="../../css/animate.css" />
+
+    <link rel="stylesheet" href="../../css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="../../css/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="../../css/magnific-popup.css" />
+
+    <link rel="stylesheet" href="../../css/aos.css" />
+
+    <link rel="stylesheet" href="../../css/ionicons.min.css" />
+
+    <link rel="stylesheet" href="../../css/bootstrap-datepicker.css" />
+    <link rel="stylesheet" href="../../css/jquery.timepicker.css" />
+
+    <link rel="stylesheet" href="../../css/flaticon.css" />
+    <link rel="stylesheet" href="../../css/icomoon.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
+
     <link rel="stylesheet" href="imageGallery.css" />
   </head>
   <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
+      id="ftco-navbar"
+    >
+      <div class="container">
+        <a class="navbar-brand" href="../../index.html"
+          >陳皓宇<small>405440339</small></a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#ftco-nav"
+          aria-controls="ftco-nav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="oi oi-menu"></span> Menu
+        </button>
+        <div class="collapse navbar-collapse" id="ftco-nav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a href="../../index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="../../menu.html" class="nav-link">github</a>
+            </li>
+            <li class="nav-item">
+              <a href="imageGallery.html" class="nav-link">Image Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a href="../../blog.html" class="nav-link">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a href="../../about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="room.html"
+                id="dropdown04"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+                >Shop</a
+              >
+              <div class="dropdown-menu" aria-labelledby="dropdown04">
+                <a class="dropdown-item" href="shop.html">Shop</a>
+                <a class="dropdown-item" href="product-single.html"
+                  >Single Product</a
+                >
+                <a class="dropdown-item" href="room.html">Cart</a>
+                <a class="dropdown-item" href="checkout.html">Checkout</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link">Contact</a>
+            </li>
+            <li class="nav-item cart">
+              <a href="cart.html" class="nav-link"
+                ><span class="icon icon-shopping_cart"></span
+                ><span
+                  class="bag d-flex justify-content-center align-items-center"
+                  ><small>1</small></span
+                ></a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div id="line3">
+      <br /><br /><br />
       <img src="./img/img1.jpg" alt="" />
       <img src="./img/img2.jpg" alt="" />
       <img src="./img/img3.jpg" alt="" />
@@ -32,5 +138,22 @@
       <img src="./img/img8.jpg" alt="" />
       <img src="./img/img9.jpg" alt="" />
     </div>
+    <script src="../../js/jquery.min.js"></script>
+    <script src="../../js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="../../js/popper.min.js"></script>
+    <script src="../../js/bootstrap.min.js"></script>
+    <script src="../../js/jquery.easing.1.3.js"></script>
+    <script src="../../js/jquery.waypoints.min.js"></script>
+    <script src="../../js/jquery.stellar.min.js"></script>
+    <script src="../../js/owl.carousel.min.js"></script>
+    <script src="../../js/jquery.magnific-popup.min.js"></script>
+    <script src="../../js/aos.js"></script>
+    <script src="../../js/jquery.animateNumber.min.js"></script>
+    <script src="../../js/bootstrap-datepicker.js"></script>
+    <script src="../../js/jquery.timepicker.min.js"></script>
+    <script src="../../js/scrollax.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+    <script src="../../js/google-map.js"></script>
+    <script src="../../js/main.js"></script>
   </body>
 </html>
